# ffmpeg_rtsp_mpp

./: 20150708185217842  CMakeLists.txt  MppDecode.c  MppDecode.cpp  MppDecode.h  README.md  main.c  main.cpp
ffm_inc/libavutil/: ffversion.h
ffm_lib/: libavahi-client.so.3.2.9  libavahi-common.so.3.5.3  libavahi-core.so.7.0.2  libavahi-glib.so.1  libavc1394.so.0
firefly_mpplib/: librockchip_vpu.so.1
tmp/: MppDecode.cpp  MppDecode.h  RtspMppImpl.h
